--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;700&display=swap');
 
+html {
+  scroll-behavior: smooth;
+}
 * {
   margin: 0;
   padding: 0;
@@ -22,6 +25,8 @@ body {
   height: 80w;
   color: #ffffff;
   background-color:#3373d3;
+  padding: 20px;
+  height: 100vh;
 }
 
 .navbar {
@@ -162,7 +167,7 @@ font-size: 3em;
 .card_img {
   width: 100%;
   height: 300px;
-  background-image: url(../img/proyectofuturo.jpg);
+  background-image: url(../img/proyectofuturo2.jpg);
   background-size: cover;
 }
 
@@ -190,6 +195,8 @@ font-size: 3em;
 .contacto {
   background-color: #52153d;
   color: #fff;
+  padding: 20px;
+  height: 100vh;
 }
 
 .container-contact {
@@ -204,8 +211,8 @@ font-size: 3em;
 
 
 .container-contact img {
-  width: 440px;
-  height: 550px;
+  width: 600px;
+  height: 750px;
   bottom: 2px;
   opacity: .4;
 }
